region+choose-section

--- a/index.html
+++ b/index.html
@@ -158,7 +158,158 @@
             <button class="places__btn">Посмотреть все места</button>
         </div>
     </section>
+    <!-- секция с карточками-перевертышами -->
+    <section class="tour">
+        <div class="container">
+            <h2 class="tour__title">Выбери виртуальный тур</h2>
+            <div class="tour__descr">Видео, VR, Видео 360°, 3D</div>
 
+            <div class="tour__wrap">
+
+                <div class="tour__scene">
+                    <div class="tour__card">
+                      <div class="tour__front tour__front_green">
+                        <div class="tour__text tour__text_0">0</div>
+                      </div>
+                      <div class="tour__face tour__face_back">
+                        <img src="img/places/bronze-horseman.png" alt="backface-visibility">
+                        <h2>заголовок</h2>
+                        <button>кнопка</button>
+                      </div>
+                    </div>
+                </div>
+
+                <div class="tour__scene">
+                    <div class="tour__card">
+                        <div class="tour__front tour__front_red">
+                            <div class="tour__text tour__text_01">01</div>
+                        </div>
+                        <div class="tour__face tour__face_red tour__face_back">
+                            <img src="img/places/bronze-horseman.png" alt="backface-visibility">
+                            <h2>заголовок</h2>
+                            <button>кнопка</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="tour__scene">
+                    <div class="tour__card">
+                        <div class="tour__front tour__front_orange">
+                            <div class="tour__text tour__text_02">02</div>
+                        </div>
+                        <div class="tour__face tour__face_orange tour__face_back">
+                            <img src="img/places/bronze-horseman.png" alt="backface-visibility">
+                            <h2>заголовок</h2>
+                            <button>кнопка</button>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="tour__scene">
+                    <div class="tour__card">
+                        <div class="tour__front tour__front_viol">
+                            <div class="tour__text tour__text_03">03</div>
+                        </div> 
+                        <div class="tour__face tour__face_viol tour__face_back">
+                            <img src="img/places/bronze-horseman.png" alt="backface-visibility">
+                            <h2>заголовок</h2>
+                            <button>кнопка</button>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div> 
+
+            <img src="icons/tour/Ellipse.png" alt="eclipse" class="tour__eclipse">
+        </div>
+    </section>
+    <!-- секция с регионами -->
+    <section class="region">
+        <div class="container">
+            <h2 class="region__title">Топ посещаемый регионов</h2>
+            <div class="region__wrap">
+                <div class="region__item">
+                    <img src="img/region/moscow.png" alt="moscow" class="region__icon">
+                    <div class="region__descr">Москва<br>
+                        и Московская область</div>
+                </div>
+                <div class="region__item">
+                    <img src="img/region/saint-p.png" alt="saint-p" class="region__icon">
+                    <div class="region__descr">Санкт-Петербург<br>
+                        и Ленинградская область</div>
+                </div>
+                <div class="region__item">
+                    <img src="img/region/ircutsk.png" alt="ircutsk" class="region__icon">
+                    <div class="region__descr">Иркутская<br>
+                        область</div>
+                </div>
+                <div class="region__item">
+                    <img src="img/region/kaliningrad.png" alt="kaliningrad" class="region__icon">
+                    <div class="region__descr">Калининградская<br>
+                        область</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- секция сo слайдером -->
+    <section class="choose">
+        <div class="container">
+            <h2 class="choose__title">Выбери тур</h2>
+        </div>
+        <div class="choose__slider">
+            <div class="choose__item">
+                <div class="choose__square"><img src="icons/choose/bal.png" alt="bal" class="choose__icon"></div>
+                <div class="choose__descr">Активные 
+                    туры</div>
+            </div>
+            <div class="choose__item">
+                <div class="choose__square"><img src="icons/choose/pizza.png" alt="pizza" class="choose__icon"></div>
+                <div class="choose__descr">Гастрономические
+                    туры</div>
+            </div>
+            <div class="choose__item">
+                <div class="choose__square"><img src="icons/choose/mountain.png" alt="mountain" class="choose__icon"></div>
+                <div class="choose__descr">Экстримальные
+                    туры</div>
+            </div>
+            <div class="choose__item">
+                <div class="choose__square"><img src="icons/choose/beach.png" alt="beach" class="choose__icon"></div>
+                <div class="choose__descr">Оздоровительные
+                    туры</div>
+            </div>
+            <div class="choose__item">
+                <div class="choose__square"><img src="icons/choose/wave.png" alt="wave" class="choose__icon"></div>
+                <div class="choose__descr">Круизы</div>
+            </div>
+            <div class="choose__item">
+                <div class="choose__square"><img src="icons/choose/bal.png" alt="bal" class="choose__icon"></div>
+                <div class="choose__descr">Активные 
+                    туры</div>
+            </div>
+            <div class="choose__item">
+                <div class="choose__square"><img src="icons/choose/pizza.png" alt="pizza" class="choose__icon"></div>
+                <div class="choose__descr">Гастрономические
+                    туры</div>
+            </div>
+            <div class="choose__item">
+                <div class="choose__square"><img src="icons/choose/mountain.png" alt="mountain" class="choose__icon"></div>
+                <div class="choose__descr">Экстримальные
+                    туры</div>
+            </div>
+            <div class="choose__item">
+                <div class="choose__square"><img src="icons/choose/beach.png" alt="beach" class="choose__icon"></div>
+                <div class="choose__descr">Оздоровительные
+                    туры</div>
+            </div>
+            <div class="choose__item">
+                <div class="choose__square"><img src="icons/choose/wave.png" alt="wave" class="choose__icon"></div>
+                <div class="choose__descr">Круизы</div>
+            </div>
+        </div>
+    </section>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
