--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Родные просторы</title>
 </head>
 <body>
-    <header class="header">
+    <header id="up" class="header">
         <div class="container">
             <nav class="navigation">
                 <img src="icons/header/logo.svg" alt="logo" class="navigation__logo">
@@ -362,6 +362,10 @@
         </div>
 
     </footer>
+    <!-- стрелка для прокрутки вверх -->
+    <a href="#up" class="pageup">
+        <img src="icons/pageup.svg" alt="up">
+    </a>
     <script src="js/jquery.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
